frontend_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-recipe-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-recipe-app
  template:
    metadata:
      labels:
        app: frontend-recipe-app
    spec:
      containers:
      - name: frontend-recipe-app
        image: us-east1-docker.pkg.dev/stoked-depth-451301-f5/recipe-app/recipe-app-frontend  # Replace with your GCR/GAR image
        ports:
        - containerPort: 80
