backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-recipe-app
spec:
  selector:
    app: backend-recipe-app
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 8080 # Container port where the application is listening
  type: ClusterIP   # Change to LoadBalancer if external access is needed
