frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-recipe-app
spec:
  selector:
    app: frontend-recipe-app  # This must match the labels in your Deployment
  ports:
    - protocol: TCP
      port: 80       # Port exposed by the service
      targetPort: 80 # Port on the container
  type: ClusterIP # Default service type for internal communication
